{
  "version": 4,
  "terraform_version": "1.14.7",
  "serial": 15,
  "lineage": "73d07f10-368a-2d8d-3252-288575e73aae",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cebcad7af8e2c2d5",
            "arn": "arn:aws:ec2:ap-northeast-2:660815084882:elastic-ip/eipalloc-0cebcad7af8e2c2d5",
            "domain": "vpc",
            "id": "eipalloc-0cebcad7af8e2c2d5",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-3-34-71-65.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.34.71.65",
            "public_ipv4_pool": "amazon",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "first-gateway-eip"
            },
            "tags_all": {
              "Name": "first-gateway-eip"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "660815084882",
            "id": "eipalloc-0cebcad7af8e2c2d5",
            "region": "ap-northeast-2"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "whata_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:660815084882:internet-gateway/igw-00c0b353fb46b1ec5",
            "id": "igw-00c0b353fb46b1ec5",
            "owner_id": "660815084882",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "whata-igw"
            },
            "tags_all": {
              "Name": "whata-igw"
            },
            "vpc_id": "vpc-0e2fec9dcafae682b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "660815084882",
            "id": "igw-00c0b353fb46b1ec5",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_vpc.super_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cebcad7af8e2c2d5",
            "association_id": "eipassoc-01cdfc52b8d03cb81",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0ca312a76f8b526de",
            "network_interface_id": "eni-02ea60f29654d3e10",
            "private_ip": "10.0.1.132",
            "public_ip": "3.34.71.65",
            "region": "ap-northeast-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d34dd35a6b48bbb3",
            "tags": {
              "Name": "first-gateway"
            },
            "tags_all": {
              "Name": "first-gateway"
            },
            "vpc_id": "vpc-0e2fec9dcafae682b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "660815084882",
            "id": "nat-0ca312a76f8b526de",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.whata_igw",
            "aws_subnet.public_subnet_1",
            "aws_vpc.super_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:660815084882:route-table/rtb-090287d60f6b31102",
            "id": "rtb-090287d60f6b31102",
            "owner_id": "660815084882",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ca312a76f8b526de",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e2fec9dcafae682b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "660815084882",
            "id": "rtb-090287d60f6b31102",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.whata_igw",
            "aws_nat_gateway.main",
            "aws_subnet.public_subnet_1",
            "aws_vpc.super_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:660815084882:route-table/rtb-06004fcabd725e804",
            "id": "rtb-06004fcabd725e804",
            "owner_id": "660815084882",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00c0b353fb46b1ec5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e2fec9dcafae682b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "660815084882",
            "id": "rtb-06004fcabd725e804",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_internet_gateway.whata_igw",
            "aws_vpc.super_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dd61de2f430499a8",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-090287d60f6b31102",
            "subnet_id": "subnet-0f7f9e51ab4bd0bd5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "660815084882",
            "id": "rtbassoc-0dd61de2f430499a8",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.whata_igw",
            "aws_nat_gateway.main",
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet_1",
            "aws_subnet.public_subnet_1",
            "aws_vpc.super_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0addd0d9dde006d31",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-090287d60f6b31102",
            "subnet_id": "subnet-0fbf17b1039b1e202"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "660815084882",
            "id": "rtbassoc-0addd0d9dde006d31",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.whata_igw",
            "aws_nat_gateway.main",
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet_2",
            "aws_subnet.public_subnet_1",
            "aws_vpc.super_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-021fc8e9f5f49ada1",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-06004fcabd725e804",
            "subnet_id": "subnet-0d34dd35a6b48bbb3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "660815084882",
            "id": "rtbassoc-021fc8e9f5f49ada1",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_internet_gateway.whata_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet_1",
            "aws_vpc.super_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d68ff527d359d443",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-06004fcabd725e804",
            "subnet_id": "subnet-09f77036450e23163"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "660815084882",
            "id": "rtbassoc-0d68ff527d359d443",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_internet_gateway.whata_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet_2",
            "aws_vpc.super_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:660815084882:subnet/subnet-0f7f9e51ab4bd0bd5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f7f9e51ab4bd0bd5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "660815084882",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "Private-subnet-1"
            },
            "tags_all": {
              "Name": "Private-subnet-1"
            },
            "vpc_id": "vpc-0e2fec9dcafae682b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "660815084882",
            "id": "subnet-0f7f9e51ab4bd0bd5",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_vpc.super_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:660815084882:subnet/subnet-0fbf17b1039b1e202",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fbf17b1039b1e202",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "660815084882",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "Private-subnet-2"
            },
            "tags_all": {
              "Name": "Private-subnet-2"
            },
            "vpc_id": "vpc-0e2fec9dcafae682b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "660815084882",
            "id": "subnet-0fbf17b1039b1e202",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_vpc.super_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:660815084882:subnet/subnet-0d34dd35a6b48bbb3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d34dd35a6b48bbb3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "660815084882",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "public-subnet-1"
            },
            "tags_all": {
              "Name": "public-subnet-1"
            },
            "vpc_id": "vpc-0e2fec9dcafae682b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "660815084882",
            "id": "subnet-0d34dd35a6b48bbb3",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_vpc.super_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:660815084882:subnet/subnet-09f77036450e23163",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09f77036450e23163",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "660815084882",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "public-subnet-2"
            },
            "tags_all": {
              "Name": "public-subnet-2"
            },
            "vpc_id": "vpc-0e2fec9dcafae682b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "660815084882",
            "id": "subnet-09f77036450e23163",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_vpc.super_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "super_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:660815084882:vpc/vpc-0e2fec9dcafae682b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fb8613d27014605a",
            "default_route_table_id": "rtb-0ab6d51ea09720cf3",
            "default_security_group_id": "sg-0b0621469e121451d",
            "dhcp_options_id": "dopt-03ba08c04e1f2fe2f",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e2fec9dcafae682b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ab6d51ea09720cf3",
            "owner_id": "660815084882",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "super-vpc"
            },
            "tags_all": {
              "Name": "super-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "660815084882",
            "id": "vpc-0e2fec9dcafae682b",
            "region": "ap-northeast-2"
          }
        }
      ]
    }
  ]
}